fixed issue with line break in wallet

--- a/public/index.css
+++ b/public/index.css
@@ -1270,4 +1270,5 @@ div.myAccordion .accordion-body p {
   white-space: normal;
   overflow: auto;
   overflow-wrap: break-word;
+  word-break: break-word;
 }
